--- a/index.html
+++ b/index.html
@@ -1,62 +1,50 @@
 <!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<style>
 
-img {
-  border-radius: 60%;
-}
-</style>
-<title>dasari venkat A01</title>
-<link rel="stylesheet" type="text/css" href="venkat.css">
+<head>
+  <meta charset="UTF-8">
+
+  <title>dasari venkat A01</title>
+  <link rel="stylesheet" type="text/css" href="venkat.css">
+
+
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="mypage.html">MyPage</a>
+    <a href="contactus.html">Contact</a>
+
+  </div>
 </head>
 
 <body>
+    <img class="img-circle" src="myimg.jpg" alt=Home height="200" width="200">
+    
 
-<ul>
-  <li><a class="active" href="C:\Webapps\A01\index.html">Home</a></li>
-  <li><a href="C:\Webapps\A01\mypage.html">Mypage</a></li>
-  <li><a href="C:\Webapps\A01\contactus.html">Contact</a></li>
-  
-</ul>
+  <h3>Present</h3>
+  <p id="para1">I am here in northwest to do masters in applied computer science.</p>
+  <h3 section id="Past">My Past</h3>
+  <p id="para1">I am from India and I have completed my under-graduation in computer science at vr sidhhartha engineering college vijayawadada.</p>
+  <h3 section id="Future">Future Endeavours</h3>
+  <p id="para2">I aspire to become a data analyst in a reputed company.</p>
 
-<img src="C:\Webapps\A01\myimg.jpg" alt="lion" style="width:250px">
+  <h3>MY contacts</h3>
+  <p style="color:red;">github:
+    <a href="https://github.com/Dasarivenkat3">github link</a>
+  </p>
+  <p style="color:red;">Bitbucket:
+    <a href="https://bitbucket.org/Dasari_venkat/">Bitbucket link</a>
+  </p>
+  <p style="color:red;">linkedin:
+    <a href="https://www.linkedin.com/in/venkata-sai-dasari-28b011172/">Linkedin link</a>
+  </p>
 
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/2OcbJkQY-SA" frameborder="1px" allow="autoplay; encrypted-media"
+    allowfullscreen></iframe>
 
-
-
- 
-<aside>
-<main>
-<header>
-<h2> 06 - Venkata Sai Krishna Dasari  - A01 ASSIGNMENT</h2>
-</header>
-<article class="article">
-<section>
-<h3>Present</h3>
-<p id = "para1">I am here in northwest to do masters in applied computer science.</p>
-<h3 section id="Past">My Past</h3>
-<p id="para1">I am from India and I have completed my under-graduation in computer science at vr sidhhartha engineering college vijayawadada.</p>
-<h3 section id="Future">Future Endeavours</h3>
-<p id="para2">I aspire to become a data analyst in a reputed company.</p>
-
-<h3>MY contacts</h3>
-<p style="color:red;">github:<a href="https://github.com/Dasarivenkat3">github link</a></p>
-<p style="color:red;">Bitbucket:<a href="https://bitbucket.org/Dasari_venkat/">Bitbucket link</a></p>
-<p style="color:red;">linkedin:<a href="https://www.linkedin.com/in/venkata-sai-dasari-28b011172/">Linkedin link</a></p>
-</section>
-
-</article>
-</main>
-<iframe width="560" height="315"  src="https://www.youtube.com/embed/2OcbJkQY-SA"
- frameborder="1px" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</aside>
-
-<footer>
-<p style="text-align:center; color:red" >Made by- Venkata Sai Krishna Dasari</p>
-<p style="text-align:center; color:red">Contact- S533489@NWMISSOURI.EDU</p>
-</footer>
+  <footer>
+    <p style="text-align:center; color:red">Made by- Venkata Sai Krishna Dasari</p>
+    <p style="text-align:center; color:red">Contact- S533489@NWMISSOURI.EDU</p>
+  </footer>
 
 
 </body>
