--- a/mypage.html
+++ b/mypage.html
@@ -2,29 +2,71 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<style>
 
-img {
-  border-radius: 60%;
-}
-</style>
-<title>dasari venkat A01</title>
-<link rel="stylesheet" type="text/css" href="venkat.css">
-</head>
+  <head>
+    <title>TicTacToe</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="mypage.css">
 
-<body>
+    
 
-<ul>
-  <li><a class="active" href="C:\Webapps\A01\index.html">Home</a></li>
-  <li><a href="C:\Webapps\A01\mypage.html">Mypage</a></li>
-  <li><a href="C:\Webapps\A01\contactus.html">Contact</a></li>
+  <div class="topnav">
+    <a href="index.html">Home</a>
+    <a class="active" href="mypage.html">MyPage</a>
+    <a href="contactus.html">Contact</a>
+
+  </div>
   
-</ul>
-
-<!-- <img src="C:\Webapps\A01\myimg.jpg" alt="lion" style="width:250px"> -->
-
-
-</body>
+  </head>
+  
+  <body>
+    <header>
+      <h1>Tic Tac Toe</h1>
+    </header>
+    <main>
+      <section id="upper-left"> </section>
+      <section id="upper-mid"> </section>
+      <section id="upper-right"> </section>
+  
+      <section id="center-left"> </section>
+      <section id="center-mid"> </section>
+      <section id="center-right"> </section>
+  
+      <section id="lower-left"> </section>
+      <section id="lower-mid"> </section>
+      <section id="lower-right"> </section>
+    </main>
+    <aside>
+      <h1>Specification</h1>
+      <section>
+        <ul>
+          <li>Uses full-width header and footer.</li>
+          <li>Uses main 3 x 3 css grid, each with a section.</li>
+          <li>When user clicks a childless section, it adds an X.</li>
+          <li>If the move was valid, it selects a section for the computer and adds an O.</li>
+        </ul>
+        <ol>
+          <li>Improve the computer's selection algorithm.</li>
+          <li>Add an algorithm to check for a winner.</li>
+          <li>If winner, announce the winner and end the game.</li>
+          <li>Add "Play again?" button to clear the board.</li>
+          <li>Combine AddX and AddO into a single function.</li>
+        </ol>
+      </section>
+    </aside>
+    <footer>
+      <h4>
+        <a href="https://github.com/profcase/web-tic-tac-toe">Source</a>
+        <span>&diams;</span>
+        <a href="https://profcase.github.io/web-tic-tac-toe/">Demo</a>
+      </h4>
+  
+    </footer>
+    <script src="./game.js" defer></script>
+  
+  </body>
 
 
 </html>
