Added java script

--- a/contactus.html
+++ b/contactus.html
@@ -7,6 +7,7 @@
 
 
   <div class="topnav">
+      <a href="">Dasari Venkat</a>
     <a  href="index.html">Home</a>
     <a href="mypage.html">MyPage</a>
     <a class="active" href="contactus.html">Contact</a>
@@ -18,17 +19,18 @@
   <form action="action_page.php">
 
     <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <input type="text" id="fname" name="firstname">
 
     <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <input type="text" id="lname" name="lastname">
 
     
     <label for="cnumber">Contact Number </label>
-    <input type="text" id="cnumber" name="contactnumber" placeholder="Your contact number..">
+    <input type="text" id="cnumber" name="contactnumber">
+    <p></p>
 
     <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <textarea id="subject" name="subject" style="height:100px" style=""></textarea>
 
     <input type="Done" value="Done">
 
