--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
 
   <title>dasari venkat A01</title>
   <link rel="stylesheet" type="text/css" href="venkat.css">
+<nav>
+
 
 
   <div class="topnav">
+      <a href="">Dasari Venkat</a>
     <a class="active" href="index.html">Home</a>
     <a href="mypage.html">MyPage</a>
     <a href="contactus.html">Contact</a>
+   
 
   </div>
+</nav>
 </head>
 
 <body>
@@ -41,13 +46,17 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/2OcbJkQY-SA" frameborder="1px" allow="autoplay; encrypted-media"
     allowfullscreen></iframe>
 
-  <footer>
-    <p style="text-align:center; color:red">Made by- Venkata Sai Krishna Dasari</p>
-    <p style="text-align:center; color:red">Contact- S533489@NWMISSOURI.EDU</p>
-  </footer>
+  
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
 
 </body>
+
+<footer>
+  <p style="text-align:center; color:red">Made by- Venkata Sai Krishna Dasari</p>
+  <p style="text-align:center; color:red">Contact- S533489@NWMISSOURI.EDU</p>
+</footer>
 
 
 </html>
