--- a/mypage.html
+++ b/mypage.html
@@ -13,6 +13,7 @@
     
 
   <div class="topnav">
+      <a href="">Dasari Venkat</a>
     <a href="index.html">Home</a>
     <a class="active" href="mypage.html">MyPage</a>
     <a href="contactus.html">Contact</a>
@@ -56,17 +57,19 @@
         </ol>
       </section>
     </aside>
-    <footer>
-      <h4>
-        <a href="https://github.com/profcase/web-tic-tac-toe">Source</a>
-        <span>&diams;</span>
-        <a href="https://profcase.github.io/web-tic-tac-toe/">Demo</a>
-      </h4>
-  
-    </footer>
-    <script src="./game.js" defer></script>
+   
+    <script src="game.js" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   </body>
+  <footer>
+    <h4>
+      <a href="https://github.com/profcase/web-tic-tac-toe">Source</a>
+      <span>&diams;</span>
+      <a href="https://profcase.github.io/web-tic-tac-toe/">Demo</a>
+    </h4>
+
+  </footer>
 
 
 </html>
